@@ -3,14 +3,17 @@ package Devscripts::Output;
 use strict;
 use Exporter 'import';
 use File::Basename;
+use constant accept => qr/^y(?:es)?\s*$/i;
+use constant refuse => qr/^n(?:o)?\s*$/i;
 
 our @EXPORT = (
     qw(ds_debug ds_verbose ds_warn ds_error
-      ds_die ds_msg who_called $progname $verbose)
+      ds_die ds_msg who_called $progname $verbose
+      ds_prompt accept refuse $ds_yes)
 );
 
 # ACCESSORS
-our ($verbose, $die_on_error) = (0, 1);
+our ($verbose, $die_on_error, $ds_yes) = (0, 1, 0);
 
 our $progname = basename($0);
 
@@ -37,7 +40,7 @@ sub ds_verbose($) {
 }
 
 sub who_called {
-    return '' unless ($verbose);
+    return '' unless ($verbose > 1);
     my @out = caller(1);
     return " [$out[0]: $out[2]]";
 }
@@ -58,9 +61,18 @@ sub ds_error($) {
     my $msg = $_[0];
     $msg = "$progname error $msg" . who_called;
     if ($die_on_error) {
-        die $msg;
+        print STDERR "$msg\n";
+        exit 1;
     }
     printwarn($msg, 1);
+}
+
+sub ds_prompt {
+    return 'yes' if ($ds_yes > 0);
+    print STDERR shift;
+    my $s = <STDIN>;
+    chomp $s;
+    return $s;
 }
 
 1;
